--- a/src/bz-section-view.ui
+++ b/src/bz-section-view.ui
@@ -16,6 +16,15 @@
             <property name="wrap">TRUE</property>
             <property name="wrap-mode">word-char</property>
             <property name="xalign">0</property>
+            <binding name="visible">
+              <closure function="invert_boolean" type="gboolean">
+                <closure function="is_null" type="gboolean">
+                  <lookup name="error" type="BzContentSection">
+                    <lookup name="section">BzSectionView</lookup>
+                  </lookup>
+                </closure>
+              </closure>
+            </binding>
             <binding name="label">
               <lookup name="error" type="BzContentSection">
                 <lookup name="section">BzSectionView</lookup>
@@ -28,9 +37,13 @@
             <property name="hexpand">TRUE</property>
             <property name="child">
               <object class="GtkRevealer">
-                <property name="height-request">300</property>
                 <property name="transition-type">crossfade</property>
                 <property name="transition-duration">500</property>
+                <binding name="height-request">
+                  <lookup name="banner-height" type="BzContentSection">
+                    <lookup name="section">BzSectionView</lookup>
+                  </lookup>
+                </binding>
                 <binding name="reveal-child">
                   <lookup name="loaded" type="BzAsyncTexture">
                     <lookup name="banner" type="BzContentSection">
@@ -60,60 +73,123 @@
               </object>
             </property>
             <child type="overlay">
-              <object class="GtkBox">
-                <property name="css-name">banner-text</property>
-                <property name="margin-top">30</property>
-                <property name="margin-bottom">30</property>
-                <property name="margin-start">30</property>
-                <property name="margin-end">30</property>
-                <property name="orientation">vertical</property>
-                <property name="spacing">5</property>
-                <child>
-                  <object class="GtkLabel">
-                    <property name="css-name">title</property>
-                    <style>
-                      <class name="browser-banner-title"/>
-                    </style>
-                    <property name="wrap">TRUE</property>
-                    <property name="wrap-mode">word-char</property>
-                    <property name="xalign">0</property>
-                    <binding name="label">
-                      <lookup name="title" type="BzContentSection">
-                        <lookup name="section">BzSectionView</lookup>
-                      </lookup>
-                    </binding>
+              <object class="GtkOverlay" id="banner_text_overlay">
+                <property name="css-name">banner-text-overlay</property>
+                <property name="hexpand">FALSE</property>
+                <property name="vexpand">FALSE</property>
+                <property name="child">
+                  <object class="GtkBox" id="banner_text_bg">
+                    <property name="css-name">banner-text-bg</property>
                   </object>
-                </child>
-                <child>
-                  <object class="GtkLabel">
-                    <property name="css-name">subtitle</property>
-                    <style>
-                      <class name="browser-banner-subtitle"/>
-                    </style>
-                    <property name="wrap">TRUE</property>
-                    <property name="wrap-mode">word-char</property>
-                    <property name="xalign">0</property>
-                    <binding name="label">
-                      <lookup name="subtitle" type="BzContentSection">
-                        <lookup name="section">BzSectionView</lookup>
-                      </lookup>
-                    </binding>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkLabel">
-                    <property name="css-name">description</property>
-                    <style>
-                      <class name="browser-banner-description"/>
-                    </style>
-                    <property name="wrap">TRUE</property>
-                    <property name="wrap-mode">word-char</property>
-                    <property name="xalign">0</property>
-                    <binding name="label">
-                      <lookup name="description" type="BzContentSection">
-                        <lookup name="section">BzSectionView</lookup>
-                      </lookup>
-                    </binding>
+                </property>
+                <binding name="halign">
+                  <lookup name="banner-text-halign" type="BzContentSection">
+                    <lookup name="section">BzSectionView</lookup>
+                  </lookup>
+                </binding>
+                <binding name="valign">
+                  <lookup name="banner-text-valign" type="BzContentSection">
+                    <lookup name="section">BzSectionView</lookup>
+                  </lookup>
+                </binding>
+                <child type="overlay">
+                  <object class="GtkBox" id="banner_text">
+                    <property name="css-name">banner-text</property>
+                    <property name="hexpand">FALSE</property>
+                    <property name="vexpand">FALSE</property>
+                    <property name="halign">center</property>
+                    <property name="valign">center</property>
+                    <property name="orientation">vertical</property>
+                    <property name="spacing">5</property>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="css-name">title</property>
+                        <style>
+                          <class name="browser-banner-title"/>
+                        </style>
+                        <property name="wrap">TRUE</property>
+                        <property name="wrap-mode">word-char</property>
+                        <binding name="visible">
+                          <closure function="invert_boolean" type="gboolean">
+                            <closure function="is_null" type="gboolean">
+                              <lookup name="title" type="BzContentSection">
+                                <lookup name="section">BzSectionView</lookup>
+                              </lookup>
+                            </closure>
+                          </closure>
+                        </binding>
+                        <binding name="xalign">
+                          <lookup name="banner-text-label-xalign" type="BzContentSection">
+                            <lookup name="section">BzSectionView</lookup>
+                          </lookup>
+                        </binding>
+                        <binding name="label">
+                          <lookup name="title" type="BzContentSection">
+                            <lookup name="section">BzSectionView</lookup>
+                          </lookup>
+                        </binding>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="css-name">subtitle</property>
+                        <style>
+                          <class name="browser-banner-subtitle"/>
+                        </style>
+                        <property name="wrap">TRUE</property>
+                        <property name="wrap-mode">word-char</property>
+                        <property name="xalign">0</property>
+                        <binding name="visible">
+                          <closure function="invert_boolean" type="gboolean">
+                            <closure function="is_null" type="gboolean">
+                              <lookup name="subtitle" type="BzContentSection">
+                                <lookup name="section">BzSectionView</lookup>
+                              </lookup>
+                            </closure>
+                          </closure>
+                        </binding>
+                        <binding name="xalign">
+                          <lookup name="banner-text-label-xalign" type="BzContentSection">
+                            <lookup name="section">BzSectionView</lookup>
+                          </lookup>
+                        </binding>
+                        <binding name="label">
+                          <lookup name="subtitle" type="BzContentSection">
+                            <lookup name="section">BzSectionView</lookup>
+                          </lookup>
+                        </binding>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="css-name">description</property>
+                        <style>
+                          <class name="browser-banner-description"/>
+                        </style>
+                        <property name="wrap">TRUE</property>
+                        <property name="wrap-mode">word-char</property>
+                        <property name="xalign">0</property>
+                        <binding name="visible">
+                          <closure function="invert_boolean" type="gboolean">
+                            <closure function="is_null" type="gboolean">
+                              <lookup name="description" type="BzContentSection">
+                                <lookup name="section">BzSectionView</lookup>
+                              </lookup>
+                            </closure>
+                          </closure>
+                        </binding>
+                        <binding name="xalign">
+                          <lookup name="banner-text-label-xalign" type="BzContentSection">
+                            <lookup name="section">BzSectionView</lookup>
+                          </lookup>
+                        </binding>
+                        <binding name="label">
+                          <lookup name="description" type="BzContentSection">
+                            <lookup name="section">BzSectionView</lookup>
+                          </lookup>
+                        </binding>
+                      </object>
+                    </child>
                   </object>
                 </child>
               </object>
